@@ -11,6 +11,7 @@ SRCDIR=`dirname $0`
 SRCDIR=`cd $SRCDIR && pwd`/
 TOPSRCDIR=`cd $srcdir && pwd`
 export SRCDIR
+. ./common.shi
 . ${TOPSRCDIR}/scripts/tap-functions.shi
 progs='appendImages attributes averageImages coalesceImages coderInfo color
   colorHistogram exceptions montageImages morphImages readWriteBlob readWriteImages'
