@@ -1,4 +1,5 @@
 # !/bin/sh
+# -*- shell-script -*-
 # Copyright (C) 2003-2009 GraphicsMagick Group
 #
 # This program is covered by multiple licenses, which are described in
