@@ -6,7 +6,17 @@
 #
 test_count=0
 
+# Populate a set of shell variables with a variable per feature
+# This is used to implement a poor-man's hash map.
+for feature in ${MAGICK_FEATURES}
+do
+    eval MAGICK_FEATURE_${feature}=yes
+done
+
 # Report the number of TAP tests we will subsequently run
+#
+# Usage:
+#   test_plan_fn integer
 test_plan_fn ()
 {
     tests_planned=$1
@@ -14,6 +24,9 @@ test_plan_fn ()
 }
 
 # Report TAP test result and increment current test count
+#
+# Usage:
+#   test_result_fn result description
 test_result_fn ()
 {
     set +x
@@ -31,10 +44,50 @@ test_result_fn ()
 }
 
 # Test a simple command where pass/fail depends on command exit status
+#
+# Usage:
+#   test_command_fn description [ -F feat1,feat2,...] command
 test_command_fn ()
 {
     test_description=$1
     shift
-    "$@" && test_result="ok" || test_result="not ok"
-    test_result_fn "${test_result}" "${test_description}"
+
+    # Parse any feature dependency specification (-F 'feat1 feat2 ...'
+    test_feature_spec=''
+    while test $# -gt 0
+    do
+        case $1 in
+            -F)
+                test_feature_spec=$2
+                shift
+                ;;
+            *)
+                break
+                ;;
+        esac
+        shift
+    done
+
+    missing=''
+    for feature in ${test_feature_spec}
+    do
+        # Check if required feature is supported
+        if eval test \""\$MAGICK_FEATURE_${feature}"\" != yes
+        then
+            if test "${missing}x" = 'x'
+            then
+                missing=${feature}
+            else
+                missing="${missing} ${feature}"
+            fi
+        fi
+    done
+
+    if test "${missing}x" != 'x'
+    then
+        test_result_fn "ok" "${test_description} # SKIP requires ${missing} support"
+    else
+        ("$@") && test_result="ok" || test_result="not ok"
+        test_result_fn "${test_result}" "${test_description}"
+    fi
 }
