@@ -2,5 +2,6 @@
 SRCDIR=`dirname $0`
 SRCDIR=`cd $SRCDIR && pwd`
 TOPSRCDIR=`cd $srcdir && pwd`
+. ./common.shi
 . $TOPSRCDIR/scripts/tap-functions.shi
 cd tests || exit 1
