@@ -39,6 +39,11 @@
 <p>2012-08-19  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>scripts/tap-functions.shi: If a test declares that it needs
+certain features, skip the test if required features are not
+available.</li>
+<li>configure.ac: Build a supported features list and save to
+common.shi script for use by test scripts.</li>
 <li>Makefile.am (LOG_COMPILER): Run Bourne-shell based TAP scripts
 with the same shell $(SHELL) that configure selected for the
 Makefile to use.</li>
@@ -77,7 +82,7 @@ tile rather than a temporary file.</li>
 <p>gm benchmark convert Demo.jnx Demo.gif</p>
 </blockquote>
 <div class="system-message">
-<p class="system-message-title">System Message: WARNING/2 (<tt class="docutils">/home/bfriesen/src/graphics/GM/www/Changelog.rst</tt>, line 30)</p>
+<p class="system-message-title">System Message: WARNING/2 (<tt class="docutils">/home/bfriesen/src/graphics/GM/www/Changelog.rst</tt>, line 37)</p>
 <p>Block quote ends without a blank line; unexpected unindent.</p>
 </div>
 <p class="last">before: Results: 1 threads 1 iter 20.36s user 20.66s total 0.048 iter/s 0.049 iter/cpu
